# mongo-single-kernel-library

./: .codespellignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  publish.yaml
single_kernel_mongo/: abstract_charm.py  exceptions.py  status.py
single_kernel_mongo/config/: audit_config.py  literals.py  logrotate_config.py  models.py  mongo_paths.py  relations.py  roles.py
single_kernel_mongo/core/: abstract_upgrades.py  exceptions.py  k8s_worload.py  kubernetes_upgrades.py  machine_upgrades.py  operator.py  secrets.py  structured_config.py  typed_charm.py  version_checker.py  vm_workload.py  workload.py
single_kernel_mongo/events/: backups.py  cluster.py  database.py  lifecycle.py  password_actions.py  passwords.py  primary_action.py  sharding.py  tls.py  upgrades.py
single_kernel_mongo/lib/charms/operator_libs_linux/v2/: snap.py
single_kernel_mongo/managers/: backups.py  cluster.py  config.py  k8s.py  mongo.py  mongodb_operator.py  mongos_operator.py  sharding.py  tls.py  upgrade.py
single_kernel_mongo/state/: abstract_state.py  app_peer_state.py  backup_state.py  charm_state.py  cluster_state.py  config_server_state.py  models.py  peer_state.py  tls_state.py  unit_peer_state.py  upgrade_state.py
single_kernel_mongo/templates/: logrotate.j2
single_kernel_mongo/utils/: helpers.py  mongo_config.py  mongo_connection.py  mongodb_users.py
single_kernel_mongo/workload/: __init__.py  backup_workload.py  log_rotate_workload.py  mongodb_workload.py  mongos_workload.py  monitor_workload.py
tests/unit/: conftest.py  helpers.py  test_backup_manager.py  test_basic.py  test_charm.py  test_charm_state.py  test_config_manager.py  test_helpers.py  test_mongo_manager.py  test_mongodb_config.py  test_mongodb_connection.py  test_mongodb_paths.py  test_mongodb_users.py  test_mongodb_workload.py  test_password_actions.py  test_structured_config.py  test_tls.py
tests/unit/data/: list_backups.json
tests/unit/mongodb_test_charm/: actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  requirements.txt
tests/unit/mongodb_test_charm/src/: charm.py
tests/unit/mongos_test_charm/: charmcraft.yaml  metadata.yaml  requirements.txt
tests/unit/mongos_test_charm/src/: charm.py
